--- a/Ejercicio10/especie.html
+++ b/Ejercicio10/especie.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>especies</title>
-    <link rel="stylesheet" href="/Ejercicio9/style.css">
+    <link rel="stylesheet" href="/Ejercicio10/style.css">
 </head>
 
 <body>
-
+    <div class="img"><img src="/Imagenes/panoramica.jpg" alt=""></div>
     <h1 class="titulo">Parque Natural <span>Sierra Bicuerca</span></h1>
     <div class="contenedorcentral">
 
         <lu class="menu">
-            <li ><a href="/Ejercicio9/index.html">Inicio</a></li>
-            <li ><a href="/Ejercicio9/especie.html">Especie</a></li>
+            <li ><a href="/Ejercicio10/index.html">Inicio</a></li>
+            <li class="color1"><a href="/Ejercicio10/especie.html">Especie</a></li>
             <li>Reservas</li>
             <li>Galeria</li>
         </lu>
@@ -24,7 +24,7 @@
 
         <section>
             <h2>Especies del parque</h2>
-            <hr>
+
 
             <p>Estos son algunos de los habitantes del parque:</p>
 
@@ -54,10 +54,9 @@
 
                 </p>
             </article>
-
         </section>
     </div>
-
+    <footer><span>La imagen del título pertenece <u>AMgail</u> y se distribuye bajo licencia <u>CreativeCommons</u></span></footer>
 </body>
 
 </html>
