corrigiendo algunas referencias

--- a/Ejercicio10/especie.html
+++ b/Ejercicio10/especie.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>especies</title>
-    <link rel="stylesheet" href="/Ejercicio10/style.css">
+    <link rel="stylesheet" href="/Ejercicio_HTML-CSS/Ejercicio10/style.css">
 </head>
 
 <body>
-    <div class="img"><img src="/Imagenes/panoramica.jpg" alt=""></div>
+    <div class="img"><img src="/Ejercicio_HTML-CSS/Imagenes/panoramica.jpg" alt="foto panoraminca del parque bicuerca"</div>
     <h1 class="titulo">Parque Natural <span>Sierra Bicuerca</span></h1>
     <div class="contenedorcentral">
 
         <lu class="menu">
-            <li ><a href="/Ejercicio10/index.html">Inicio</a></li>
-            <li class="color1"><a href="/Ejercicio10/especie.html">Especie</a></li>
+            <li ><a href="/Ejercicio_HTML-CSS/Ejercicio10/index.html">Inicio</a></li>
+            <li class="color1"><a href="/Ejercicio_HTML-CSS/Ejercicio10/especie.html">Especie</a></li>
             <li>Reservas</li>
             <li>Galeria</li>
         </lu>
