--- a/Ejercicio6/index.html
+++ b/Ejercicio6/index.html
@@ -5,53 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>especies</title>
+    <title>index</title>
     <link rel="stylesheet" href="/parquenatural/estilos.css">
 </head>
 
 <body>
-    <h1  class="titulo">Parque Natural <span>Sierra Bicuerca</span></h1>
+  
+    <h1 class="titulo">Parque Natural <span>Sierra Bicuerca</span></h1>
     <div class="contenedorcentral">
-    <aside>
-        <lu class="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li class="color2"><a href="/parquenatural/especies.html">Especie</a></li>
-            <li>Reservas</li>
-            <li>Galeria</li>
-        </lu>
-    </aside>
+        <aside>
+            <lu class="menu">
+                <li class="color1"><a href="/parquenatural/index.html">Inicio</a></li>
+                <li><a href="/parquenatural/especies.html">Especie</a></li>
+                <li>Reservas</li>
+                <li>Galeria</li>
+            </lu>
+        </aside>
 
-    <section>
-        <h2>Especies del parque</h2>
-        <hr>
-
-        <p>Estos son algunos de los habitantes del parque:</p>
-
-        <article>
-            <h3>Nutria</h3>
-            <p>
-                La matria europea o paleártica (Lutra lutra) es un mamifero carnivoro de habitat acuático. Se alimenta
-                de peces, ranas y pequeñas presas que caza en el rio Cerca de sus lugares de cobijo, podremos ver
-                toboganes que crean para llegar rápidamente al agua
-
-            </p>
-            <h3>Buitre leonado</h3>
-            <p>
-                El buitre leonado (Gyps falvus) es un ave rapaz, una de las mayores que puede encontrarse en la
-                Peninsula Ibérica. Su alimentación principal es la carroda, que localiza con su aguda vista
-
-            </p>
-            <h3>Ginete</h3>
-            <p>
-                La gineta (Genetta genetta) es una especie de manifero carnivoro. Son grandes trepadoras, uy ágles y
-                grandes cazadoreas de pequeños anales Aunque tambien se alimentan de los frutos del bosque que se peden
-                encontrar en el parque.
-
-            </p>
-        </article>
-
-    </section>
+        <section>
+            <h2>Bienvenidos al Parque Natural</h2>
+            <hr>
+            <article>
+                <p>
+                    El Parque Natural de Sierra Bicuerca, reserva de la biosfera, es referencia obligada del bosque y
+                    matorral mediterráneo interior, y habitat de la fina y flora autóctona.
+                </p>
+                <p>
+                    Fue declarado parque natural en 1983, con una superficie de 9.090 Has siendo uno de los enclaves más
+                    extensos de la Comunidad Valenciana. Con un gran espesor de vegetación, y varios riachuelos ofrecen
+                    un
+                    clima ideal para las especies terrestres y acuáticas. Sus bosques, de carrasca y pino, albergan una
+                    amplia colonia de aves.
+                </p>
+                <p>
+                    Entre las especies del parque podemos destacar una de las últimas colonias de buitre leonado de la
+                    zona.
+                    También nos veremos constantemente sobrevolados por el halcón peregrino o el águila perdicera. Al
+                    acercamos a los riachuelos, veremos numerosas pisadas de jabalis y ciervos, y si no hacemos mucho
+                    ruido,
+                    no es dificil encontrar alguno abrevando bajo la atenta mirada del martin pescador, esperando a la
+                    despistada trucha.
+                </p>
+            </article>
+        </section>
     </div>
 </body>
 
-</html>
+</html>s
